# LionXA

./: .dockerignore  .env.backup  .env.example  .firebaserc  .gcloudignore  .gitignore  .prettierignore  AGENTS.md  AGENT_MODE.md  AI_INTEGRATION_REPORT.md  BROWSER_INTEGRATION_REPORT.md  CLAUDE.md  CLEANUP_REPORT.md  CODEOWNERS  COMMUNICATION_LAYER_REPORT.md  Dockerfile  FINAL_FIX_APPLIED_REPORT.md  GEMINI.md  GUACAMOLE_CONFIG_REPORT.md  IDX_ENVIRONMENT_UPDATED.md  MEGA_SYSTEM_SETUP_PROMPT.md  PRODUCTION.md  README.md  README.recon.md  RESEARCH_TODOS.md  SUMMARY.md  SYSTEM_OPERATIONAL_REPORT.md  TASK_TEMPLATE.md  TUTORIAL.md  apphosting.yaml  architecture_analysis_report.json  branch-protection.proof.txt  configurations-summary.md  devrevie  docker-compose.yml  env.synced.sample  eslint.config.mjs  fix_and_enhance_report.json  i18n.ts  jest.config.js  (+26 more)
.github/: pull_request_template.md
.mcp/: servers.json
.org/: access-policy.md
_reports/: README.recon.md  ci-readme.txt  config-report.json  deps-graph.json  diagnostics.md  env-baseline.txt  file_scan.txt  full_reconnaissance_report.md  generate_deps.py  generate_research_data.py  generate_scripts_report.py  git-report.md  inventory.json  jules-dry-run.plan.txt  parse_configs.py  project-hygiene-report.json  project_hygiene.py  research-data.json  sbom.json  scripts-report.json  secrets-audit.md  secrets_audit.py  setup-summary.txt  spot_check.py
aritcector/: architecture.data.js  myproxy.html
docs/: AGENTS.md  (+7 more)
services/backend/: Dockerfile  pyproject.toml
services/backend/app/: agent_graph.py  main.py  tools.py
(+1590 files in other folders)
